@@ -1,3 +1,9 @@
+Sat 19 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
+
+    * htsearch/htsearch.cc (setupWords), htsearch/parser.cc (phrase):
+      Don't treat boolean_keywords in phrases as special.
+      With patch of 11 June, no endless loop, but searches fail.
+
 Mon 14 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
 
     * htdig/Retriever.cc:
